打字练习：刻舟求剑

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 <body>
     <h1>Hello World!</h1>
     <div>This is my first page.</div>
+
+    <div>08/02/2018 打字练习</div>
+    <p>
+        刻舟求剑
+        从前，有个人坐船过江，他一不小心，把挂在身上的宝剑掉进江里去了。那个人一点儿也不着急，那出小刀在船舷上刻了一个记号。
+        旁边的人催他：“还不赶快捞!在船舷上刻记号有什么用啊?”
+        那个人不慌不忙地指了指刻的记号，说：“不用着急，宝剑是从这儿掉下去的，等船靠了岸，我就从这儿跳下去，准能把宝剑捞上来。”
+    </p>
 </body>
 </html>
