--- a/index.html
+++ b/index.html
@@ -3,18 +3,48 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>打字练习</title>
+    <style>
+        h2 {
+            text-align: center;
+            font-family: KaiTi;
+        }
+        p {
+            text-indent: 2em;
+            font-family: KaiTi;
+        }
+        p.poem{
+            text-align: center;
+            text-indent: 0em;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello World!</h1>
-    <div>This is my first page.</div>
+    <h1>打字练习</h1>
+    <div>08/02/2018</div>
+    <h2>刻舟求剑</h2>
+    <p>从前，有个人坐船过江，他一不小心，把挂在身上的宝剑掉进江里去了。那个人一点儿也不着急，拿出小刀在船舷上刻了一个记号。</p>
+    <p>旁边的人催他：“还不赶快捞!在船舷上刻记号有什么用啊?”</p>
+    <p>那个人不慌不忙地指了指刻的记号，说：“不用着急，宝剑是从这儿掉下去的，等船靠了岸，我就从这儿跳下去，准能把宝剑捞上来。”</p>
 
-    <div>08/02/2018 打字练习</div>
-    <p>
-        刻舟求剑
-        从前，有个人坐船过江，他一不小心，把挂在身上的宝剑掉进江里去了。那个人一点儿也不着急，那出小刀在船舷上刻了一个记号。
-        旁边的人催他：“还不赶快捞!在船舷上刻记号有什么用啊?”
-        那个人不慌不忙地指了指刻的记号，说：“不用着急，宝剑是从这儿掉下去的，等船靠了岸，我就从这儿跳下去，准能把宝剑捞上来。”
+    <h2>十二月花名歌</h2>
+    <p class="poem">
+        正月山茶满盆开，<br>
+        二月迎春初开放。<br>
+        三月桃花红十里，<br>
+        四月牡丹国色香。<br>
+        五月石榴红似火，<br>
+        六月荷花满池塘。<br>
+        七月茉莉花如雪，<br>
+        八月桂花满枝香。<br>
+        九月菊花姿百态，<br>
+        十月芙蓉正上妆。<br>
+        冬月水仙案头供，<br>
+        腊月寒梅斗冰霜。<br>
     </p>
+
+    <h2>画家乡</h2>
+    <p>孩子们爱家乡，也爱画自己美丽的家乡。</p>
+    <p>涛涛的家乡在海边。他画的海那么蓝，那么蓝。一艘艘船上装满了鱼和虾。那个在海便捡贝壳的孩子，就是涛涛。</p>
 </body>
 </html>
