Fixed a few bugs (v1)

--- a/math.html
+++ b/math.html
@@ -92,7 +92,7 @@
         
         @media screen and (max-width: 600px) {
             label {
-                font-size: 25vw;
+                font-size: calc(100vw / 7);
             }
             
             input[type="number"] {
