Updated 2048 to have score

--- a/2048.html
+++ b/2048.html
@@ -31,12 +31,13 @@ div#scoreTitle {
 }
 
 div#scoreContainer {
-    width: 5vw;
+    width: 10vw;
     background-color: #bbada0;
     color: white;
     border-radius: 3px;
     padding: 1vw 2vw;
     margin: 0 auto;
+    font-size: 2vw;
 }
 
 #loading {
