Updated 2048 to have score

--- a/2048.html
+++ b/2048.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" href="2048.ico">
         <script type="text/javascript">
             // set the pyodide files URL (packages.json, pyodide.asm.data etc)
             window.languagePluginUrl = 'https://cdn.jsdelivr.net/pyodide/v0.16.1/full/';
