Updated 2048 to handle 5-digit numbers

--- a/2048.html
+++ b/2048.html
@@ -11,21 +11,21 @@
         <style>
 body {
     background-color: #faf8ef;
-    width: 46vw;
-    margin: 0 auto;
+    width: 23vw;
+    margin: 1vw auto;
     font-family: arial;
 }
 
 table {
-    margin-top: 1vw;
+    margin-top: 0.5vw;
     border-collapse: collapse;
     display: block;
 }
 
 td.border {
-    border: 15px solid #bbada0;
-    width: 10vw;
-    height: 10vw;
+    border: 0.7vw solid #bbada0;
+    width: 5vw;
+    height: 5vw;
     text-align: center;
 }
 
@@ -34,16 +34,16 @@ div.scoreTitle {
 }
 
 div.scoreContainer {
-    width: 10vw;
+    width: 5vw;
     background-color: #bbada0;
     color: white;
-    border-radius: 3px;
-    padding: 1vw 2vw;
-    font-size: 1.9vw;
+    border-radius: 0.1vw;
+    padding: 0.5vw 1vw;
+    font-size: 0.9vw;
 }
 
 div#scoresContainer {
-    height: 6.5vw;
+    height: 3.2vw;
 }
 
 div#score {
@@ -55,26 +55,26 @@ div#highScore {
 }
 
 div#buttonContainer {
-    margin-top: 1vw;
-    height: 4vw;
+    margin-top: 0.5vw;
+    height: 2vw;
 }
 
 #loading {
-    font-size: 10vw;
+    font-size: 5vw;
 }
 
 button {
     display: inline-block;
     background: #8f7a66;
-    border-radius: 3px;
-    padding: 0 2vw;
+    border-radius: 0.1vw;
+    padding: 0 1vw;
     text-decoration: none;
     color: #f9f6f2;
-    height: 4vw;
-    line-height: 4vw;
+    height: 2vw;
+    line-height: 2vw;
     display: block;
     text-align: center;
-    font-size: 2vw;
+    font-size: 1vw;
     cursor: pointer;
 }
 
