Edit home page and images

--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     <main>
       <nav>
         <h1>Thomas's Website</h1>
-        <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Blog</li>
-        </ul>
       </nav>
-      <div class="container"></div>
+      <div class="container">
+        <ul>
+          <li><a href="2048">2048</a></li>
+          <li><a href="counter">counter</a></li>
+          <li><a href="minesweeper">minesweeper</a></li>
+        </ul>
+      </div>
     </main>
     <script src="js/app.js"></script>
   </body>
