--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
     <main>
       <nav>
         <h1>Thomas's Website</h1>
-      </nav>
-      <div class="container">
         <ul>
-          <li><a href="2048">2048</a></li>
-          <li><a href="counter">counter</a></li>
-          <li><a href="minesweeper">minesweeper</a></li>
+          <li>Home</li>
+          <li>About</li>
+          <li>Blog</li>
         </ul>
-      </div>
+      </nav>
+      <div class="container"></div>
     </main>
     <script src="js/app.js"></script>
   </body>
