--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <title>Thomas's Website</title>
   </head>
   <body>
+    <header></header>
     <main>
       <nav>
         <h1>Thomas's Website</h1>
@@ -32,5 +33,6 @@
       <div class="container"></div>
     </main>
     <script src="js/app.js"></script>
+    <footer>v1671588135</footer>
   </body>
 </html>
