--- a/counter/index.html
+++ b/counter/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="counter.css">
 </head>
+
 <body>
     <table id="table">
         <tr>
@@ -19,5 +21,7 @@
         <button id="reset">Reset</button>
     </div>
     <script src="counter.js"></script>
+    <script src="/js/wakelock.js"></script>
 </body>
+
 </html>
